<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/lora"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/secondary_blue"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/lora"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/secondary_blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="username"
        android:hint="@string/username"
        android:fontFamily="@font/lora"
        android:textColor="@color/platinum"
        android:textColorHint="@color/platinum"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:fontFamily="@font/lora"
        android:textColor="@color/platinum"
        android:textColorHint="@color/platinum"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:fontFamily="@font/lora"
        android:textColor="@color/platinum"
        android:textColorHint="@color/platinum"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="14dp"
        android:fontFamily="@font/lora"
        android:text="@string/register"
        android:textStyle="bold"
        android:textColor="@color/rich_black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonGoBack"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:fontFamily="@font/lora"
        android:text="@string/go_back"
        android:textStyle="bold"
        android:textColor="@color/rich_black" />
</LinearLayout>